--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 24
     buildToolsVersion '24.0.3'
 
-    aaptOptions.cruncherEnabled = false
-    aaptOptions.useNewCruncher = false
+//    aaptOptions.cruncherEnabled = false
+//    aaptOptions.useNewCruncher = false
 
     defaultConfig {
         applicationId "com.example.z.helloworld"
@@ -21,6 +21,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -33,4 +41,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile files('libs/okhttp-3.5.0.jar')
     compile files('libs/okio-1.11.0.jar')
+    compile files('libs/jackson-annotations-2.8.0.jar')
+    compile files('libs/jackson-core-2.8.1.jar')
+    compile files('libs/jackson-databind-2.8.5.jar')
+    compile files('libs/okhttp-urlconnection-3.4.1.jar')
 }
